UPI QR Method added

--- a/Tray/src/main/res/layout/fragment_bottom_sheet_loading_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_bottom_sheet_loading_sheet.xml
@@ -32,7 +32,7 @@
                 android:fontFamily="@font/poppins"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
-                android:text="Loading..."
+                android:text="Loading"
                 android:textColor="#4F4D55"/>
 
 
