--- a/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -20,9 +19,8 @@
     <LinearLayout
         android:id="@+id/linearLayoutMain"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="1">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/topConstraint"
@@ -58,19 +56,22 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/chevron_left" />
             </LinearLayout>
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="200dp" />-->
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             android:layout_marginTop="16dp"
             android:layout_weight="1"
             android:isScrollContainer="true"
+            app:layout_constraintTop_toBottomOf="@id/topConstraint"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView111">
+            app:layout_constraintStart_toStartOf="parent">
 
             <FrameLayout
                 android:id="@+id/frameLayout1"
@@ -285,7 +286,6 @@
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toBottomOf="@+id/priceBreakUpDetailsLinearLayout">
-
 
                                 <TextView
                                     android:id="@+id/textView18"
@@ -707,8 +707,8 @@
 
                                         <ImageView
                                             android:id="@+id/qrCodeImageView"
-                                            android:layout_width="100dp"
-                                            android:layout_height="100dp"
+                                            android:layout_width="150dp"
+                                            android:layout_height="150dp"
                                             android:layout_marginStart="12dp"
                                             android:layout_marginTop="16dp"
                                             app:layout_constraintBottom_toBottomOf="parent"
