--- a/Tray/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_net_banking_bottom_sheet.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bottom_sheet_bg"
+            android:isScrollContainer="true"
             app:layout_anchorGravity="center">
 
             <TextView
@@ -35,12 +36,13 @@
                 android:id="@+id/backButton"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
-                android:orientation="vertical"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="15dp"
+                android:gravity="center"
+                android:orientation="vertical"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:gravity="center">
+                app:layout_constraintTop_toTopOf="parent">
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -101,23 +103,24 @@
                         android:iconifiedByDefault="false"
                         android:queryBackground="@null"
                         android:queryHint="Search for banks"
-                        android:textColor="#000000"
                         android:searchIcon="@drawable/searchicon"
+                        android:textColor="#000000"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/imageView"
                         app:layout_constraintTop_toBottomOf="@+id/checkingTextView" />
+
                     <TextView
                         android:id="@+id/noResultsFoundTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="No Results Found"
-                        android:fontFamily="@font/poppins_medium"
-                        android:textColor="#000000"
                         android:layout_marginTop="16dp"
+                        android:fontFamily="@font/poppins_medium"
+                        android:text="No Results Found"
+                        android:textColor="#000000"
                         android:visibility="gone"
-                        app:layout_constraintTop_toBottomOf="@+id/searchView"
+                        app:layout_constraintEnd_toEndOf="@+id/searchView"
                         app:layout_constraintStart_toStartOf="@+id/searchView"
-                        app:layout_constraintEnd_toEndOf="@+id/searchView"/>
+                        app:layout_constraintTop_toBottomOf="@+id/searchView" />
 
                     <androidx.core.widget.NestedScrollView
                         android:id="@+id/nestedScrollView"
@@ -142,6 +145,7 @@
                                 android:textSize="12sp"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
+
                             <LinearLayout
                                 android:id="@+id/linearLayout2"
                                 android:layout_width="wrap_content"
@@ -198,8 +202,7 @@
                                     android:id="@+id/popularBanksConstraintLayout2"
                                     android:layout_width="wrap_content"
                                     android:layout_height="match_parent"
-                                    android:layout_marginEnd="16dp"
-                                    >
+                                    android:layout_marginEnd="16dp">
 
                                     <RelativeLayout
                                         android:id="@+id/popularBanksRelativeLayout2"
@@ -322,7 +325,6 @@
                             </LinearLayout>
 
 
-
                             <TextView
                                 android:id="@+id/textView24"
                                 android:layout_width="wrap_content"
@@ -368,12 +370,12 @@
                                 android:id="@+id/banksRecyclerView"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                tools:itemCount="10"
-                                tools:listitem="@layout/netbanking_banks_item"
                                 android:visibility="gone"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="@+id/linearLayout2"
-                                app:layout_constraintTop_toBottomOf="@+id/textView24"/>
+                                app:layout_constraintTop_toBottomOf="@+id/textView24"
+                                tools:itemCount="10"
+                                tools:listitem="@layout/netbanking_banks_item" />
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -385,10 +387,11 @@
                         android:layout_height="match_parent"
                         android:layout_weight="0.5"
                         android:visibility="gone"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView"
-                        app:layout_constraintBottom_toBottomOf="parent">
+                        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView">
+
                         <ImageView
                             android:id="@+id/imageView5"
                             android:layout_width="wrap_content"
@@ -403,11 +406,11 @@
                             android:id="@+id/textView4"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="6dp"
                             android:fontFamily="@font/poppins"
                             android:gravity="left"
                             android:textColor="#B9232F"
                             android:textSize="12sp"
-                            android:layout_marginStart="6dp"
                             app:layout_constraintStart_toEndOf="@+id/imageView5"
                             app:layout_constraintTop_toTopOf="@+id/imageView5" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -447,7 +450,7 @@
                         android:layout_centerInParent="true"
                         android:indeterminateDrawable="@drawable/loader_01"
                         android:rotation="90"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
 
                     <TextView
                         android:id="@+id/textView6"
