--- a/Tray/src/main/res/layout/fragment_u_p_i_timer_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_u_p_i_timer_bottom_sheet.xml
@@ -13,7 +13,8 @@
         android:background="@drawable/bottom_sheet_bg">
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout123"
