--- a/Tray/src/main/res/values/dimens.xml
+++ b/Tray/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="collapsed_card_height">80dp</dimen>
     <dimen name="expanded_card_height">200dp</dimen>
     <color name="scrimColor">#80000000</color>
+    <color name="seekbar_not_progress_state">#000000</color>
 </resources>
