--- a/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -313,6 +313,139 @@
                         </androidx.constraintlayout.widget.ConstraintLayout>
                     </androidx.cardview.widget.CardView>
 
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/cardView8"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginTop="16dp"
+                        android:visibility="visible"
+                        android:background="@android:color/white"
+                        app:cardCornerRadius="10dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/cardView3">
+
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/deliveryAddressConstraintLayout"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/cardview_bg"
+                            android:paddingBottom="16dp">
+
+                            <ImageView
+                                android:id="@+id/deliveryAddressObjectImage"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                android:layout_marginStart="14dp"
+                                android:src="@drawable/truck"
+                                app:layout_constraintTop_toTopOf="@+id/textView2"
+                                app:layout_constraintBottom_toBottomOf="@+id/textView2"
+                                app:layout_constraintStart_toStartOf="parent"/>
+
+                            <TextView
+                                android:id="@+id/textView2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="8dp"
+                                android:fontFamily="@font/poppins_bold"
+                                android:gravity="center"
+                                android:layout_marginStart="6dp"
+                                android:text="Deliver Address"
+                                android:textColor="#2D2B32"
+                                android:textSize="16sp"
+                                app:layout_constraintStart_toEndOf="@+id/deliveryAddressObjectImage"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <View
+                                android:id="@+id/dashedLine4"
+                                android:layout_width="match_parent"
+                                android:layout_height="2dp"
+                                android:background="@drawable/dashed_line"
+                                android:layout_marginTop="8dp"
+                                app:layout_constraintTop_toBottomOf="@+id/textView2"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent" />
+
+                            <ImageView
+                                android:id="@+id/homeIcon"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                android:layout_marginStart="14dp"
+                                android:src="@drawable/home_icon"
+                                android:layout_marginTop="12dp"
+                                app:layout_constraintTop_toBottomOf="@+id/dashedLine4"
+                                app:layout_constraintStart_toStartOf="parent"
+                                 />
+
+                            <TextView
+                                android:id="@+id/nameTextView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="12dp"
+                                android:fontFamily="@font/poppins_medium"
+                                android:text="Person Name"
+                                android:textColor="#010102"
+                                app:layout_constraintBottom_toBottomOf="@+id/homeIcon"
+                                app:layout_constraintStart_toEndOf="@id/homeIcon"
+                                app:layout_constraintTop_toTopOf="@+id/homeIcon" />
+
+                            <ImageView
+                                android:id="@+id/right_arrow"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="12dp"
+                                android:layout_marginEnd="12dp"
+                                android:src="@drawable/right_arrow"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toBottomOf="@id/dashedLine4" />
+
+
+                            <TextView
+                                android:id="@+id/mobileNumberTV"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="2dp"
+                                android:fontFamily="@font/poppins"
+                                android:text="Mobile : "
+                                android:textColor="#7F7D83"
+                                android:textSize="14sp"
+                                android:textStyle="bold"
+                                app:layout_constraintStart_toStartOf="@+id/nameTextView"
+                                app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
+
+                            <TextView
+                                android:id="@+id/mobileNumberTextViewMain"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/poppins_medium"
+                                android:text="+91-1234567890"
+                                android:textColor="#010102"
+                                app:layout_constraintStart_toEndOf="@+id/mobileNumberTV"
+                                app:layout_constraintTop_toTopOf="@+id/mobileNumberTV"
+                                app:layout_constraintBottom_toBottomOf="@+id/mobileNumberTV"/>
+
+                            <TextView
+                                android:id="@+id/addressTextViewMain"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/poppins"
+                                android:text="123 Lorem ipsum lorem ipsum\nlorem ipsum lorem ipsum\nGurgaon, Haryana,12001"
+                                android:textColor="#7F7D83"
+                                android:layout_marginTop="4dp"
+                                android:textSize="12sp"
+                                android:gravity="start|center_vertical"
+                                android:textStyle="bold"
+                                app:layout_constraintTop_toBottomOf="@+id/mobileNumberTV"
+                                app:layout_constraintStart_toStartOf="@+id/mobileNumberTV" />
+
+
+
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+                    </androidx.cardview.widget.CardView>
+
                     <TextView
                         android:id="@+id/textView12"
                         android:layout_width="wrap_content"
@@ -323,7 +456,7 @@
                         android:text="Choose payment method"
                         android:textColor="#0A090B"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/cardView3" />
+                        app:layout_constraintTop_toBottomOf="@+id/cardView8" />
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cardView4"
