--- a/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -320,7 +320,7 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginEnd="16dp"
                         android:layout_marginTop="16dp"
-                        android:visibility="visible"
+                        android:visibility="gone"
                         android:background="@android:color/white"
                         app:cardCornerRadius="10dp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -1452,9 +1452,12 @@
 
                     <com.airbnb.lottie.LottieAnimationView
                         android:id="@+id/boxpayLogoLottie"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_centerInParent="true"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         android:layout_marginTop="32dp"
                         app:lottie_fileName="boxpayLogo.json" />
                     <TextView
@@ -1462,6 +1465,9 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/boxpayLogoLottie"
                         android:layout_centerInParent="true"
+                        app:layout_constraintTop_toBottomOf="@+id/boxpayLogoLottie"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         android:layout_marginTop="8dp"
                         android:fontFamily="@font/poppins"
                         android:text="Loading..."
