--- a/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
+++ b/Tray/src/main/res/layout/fragment_main_bottom_sheet.xml
@@ -320,7 +320,7 @@
                         android:layout_marginStart="16dp"
                         android:layout_marginEnd="16dp"
                         android:layout_marginTop="16dp"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:background="@android:color/white"
                         app:cardCornerRadius="10dp"
                         app:layout_constraintEnd_toEndOf="parent"
