--- a/Sdk/src/main/res/layout/fragment_delivery_address_bottom_sheet.xml
+++ b/Sdk/src/main/res/layout/fragment_delivery_address_bottom_sheet.xml
@@ -192,7 +192,7 @@
                             android:fontFamily="@font/poppins"
                             android:gravity="center_vertical"
                             android:hint="Email address"
-                            android:inputType="textEmailAddress"
+                            android:inputType="text"
                             android:padding="8dp"
                             android:textColor="#000000"
                             android:textColorHint="#7F7D83"
@@ -201,6 +201,20 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/emailTextView"
                             tools:ignore="TouchTargetSizeCheck" />
+
+                        <TextView
+                            android:id="@+id/emailErrorText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="2dp"
+                            android:fontFamily="@font/poppins"
+                            android:gravity="center_vertical"
+                            android:lineSpacingExtra="-1sp"
+                            android:text="Invalid Email Id"
+                            android:visibility="gone"
+                            android:textColor="#ffff0000"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
 
                         <TextView
                             android:id="@+id/countryTextView"
@@ -213,7 +227,7 @@
                             android:text="Country*"
                             android:textColor="@android:color/black"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
+                            app:layout_constraintTop_toBottomOf="@+id/emailErrorText" />
 
                         <AutoCompleteTextView
                             android:id="@+id/countryEditText"
